# arxiv-rag-tutorial

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
arxiv_api/: pyproject.toml
arxiv_api/src/: main.py  utils.py
arxiv_api/src/api/: dependencies.py
arxiv_api/src/api/core/: security.py
arxiv_api/src/api/handlers/: instances.py
arxiv_api/src/api/routes/: arxiv.py  assistant.py  login.py  metadata.py  paper.py  search.py  tasks.py  users.py
arxiv_api/src/assistant/: main.py  prompts.py  tools.py
arxiv_api/src/clients/: celery_client.py
arxiv_api/src/database/: db.py
arxiv_api/src/repositories/: chat_history.py  tasks.py
arxiv_api/src/schemas/: arxiv.py  assistant.py  chat_history.py  metadata.py  search.py  user.py
arxiv_api/src/services/: builders.py  cache.py  search.py  tasks.py
arxiv_api/src/services/assistant/: client.py  prompts.py  tools.py
arxiv_backend/: .env.example  Dockerfile  pyproject.toml
arxiv_backend/src/: main.py  middlewares.py  utils.py
arxiv_backend/src/api/: dependencies.py  middlewares.py
arxiv_backend/src/api/core/: db.py  security.py
arxiv_backend/src/api/handlers/: instances.py
arxiv_backend/src/api/routes/: arxiv.py  assistant.py  chat_history.py  feedback.py  login.py  metadata.py  paper.py  tasks.py  users.py
arxiv_backend/src/repositories/: chat_history.py  feedback.py  tasks.py
arxiv_backend/src/schemas/: arxiv.py  assistant.py  feedback.py  metadata.py  search.py  user.py
arxiv_backend/src/services/: builders.py  cache.py  rate_limit.py  tasks.py
arxiv_backend/src/services/assistant/: client.py  errors.py  guardrails.py  prompts.py  tools.py
common-lib/: pyproject.toml
common-lib/arxiv_lib/: config.py  exceptions.py  schemas.py
common-lib/arxiv_lib/arxiv/: client.py  errors.py
common-lib/arxiv_lib/db/: factory.py
common-lib/arxiv_lib/db/databases/: __init__.py  postgresql.py
common-lib/arxiv_lib/db_models/: enums.py  models.py
common-lib/arxiv_lib/repositories/: errors.py  paper.py
common-lib/arxiv_lib/tasks/: enums.py  mapping.py  schemas.py  utils.py
common-lib/arxiv_lib/vector_db/: base.py  qdrant.py
common-lib/tests/: test_arxiv_client.py  test_paper_repository.py  test_vectordb.py
data_ingestion/: .env.example  Dockerfile  pyproject.toml
data_ingestion/src/: builder.py  config.py  exceptions.py
data_ingestion/src/services/: metadata_fetcher.py  s3_handler.py
data_ingestion/src/services/embeddings/: base.py  fastembed.py  inference.py
data_ingestion/src/services/indexing/: hybrid_indexer.py  text_chunker.py
data_ingestion/src/services/pdf_parser/: docling.py  parser.py
data_ingestion/src/tasks/: __init__.py  base.py  celery_app.py  celery_cfg.py  task_functions.py  utils.py
frontend/: .dockerignore  .env.example  Dockerfile  default.conf.template  docker-entrypoint.sh  index.html  nginx.conf
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  chat.ts  chatHistory.ts  client.ts  feedback.ts  ingestion.ts  papers.ts  tasks.ts
frontend/src/components/: Layout.module.css  Layout.tsx  (+1 more)
infrastructure/: main.tf  outputs.tf  secrets.auto.tfvars.sample  terraform.tfvars.sample  variables.tf
migrations/: .env.example  Dockerfile  pyproject.toml
(+43 files in other folders)
