[project]
name = "arxiv_lib"
version = "0.1.0"
description = "Common library for arxiv services"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.4.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "qdrant-client>=1.16.2",
    "sqlalchemy>=1.4.36,<2.0.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
