[project]
name = "data-ingestion"
version = "0.1.0"
description = "Arxiv data ingestion service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv_lib",
    "docling>=2.0.0",
    "httpx>=0.27.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0,<3.0.0",
    "sqlalchemy>=1.4.36,<2.0.0",
    "celery==5.6.2",
    "redis==7.2.0",
    "arxiv>=2.4.0",
    "fastembed>=0.7.4",
]

[dependency-groups]
dev = [
    "watchdog[watchmedo]>=6.0.0",
    "watchfiles>=1.1.1",
]
